--- a/.travis.yml
+++ b/.travis.yml
@@ -95,25 +95,25 @@ matrix:
     dist: trusty
     android:
       components:
-      - tools
-      - tools
-      - platform-tools
-      - build-tools-28.0.3
-      - android-26
-      - android-28
-      - add-on
-      - extra
-      - extra-android-support
-      - extra-google-google_play_services
-      - extra-google-m2repository
-      - extra-android-m2repository
-      - sys-img-x86-android-26
-      - sys-img-x86-android-28
-      - sys-img-armeabi-v7a-google_apis-26
+      # - tools
+      # - tools
+      # - platform-tools
+      - build-tools-27.0.3
+      - android-27
+      # - android-28
+      # - add-on
+      # - extra
+      # - extra-android-support
+      # - extra-google-google_play_services
+      # - extra-google-m2repository
+      # - extra-android-m2repository
+      - sys-img-x86-android-27
+      # - sys-img-x86-android-28
+      # - sys-img-armeabi-v7a-google_apis-26
       - sys-img-armeabi-v7a-google_apis-27
-    branches:
-      only:
-      - master
+    # branches:
+    #   only:
+    #   - master
     env:
       global:
       - NODE_VERSION=10.2.1
@@ -131,7 +131,7 @@ matrix:
       - 'google-gdk-license-.+'
     install:
       - echo y | sdkmanager "ndk-bundle"
-      - echo y | sdkmanager "platforms;android-28"
+      - echo y | sdkmanager "platforms;android-27"
       - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
       - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
       - nvm install 10.2.1
@@ -142,37 +142,36 @@ matrix:
       - npm install
       - react-native link
 
-      - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid harmless sdkmanager warning 
-      - echo y | sdkmanager 'ndk-bundle'
-      - echo y | sdkmanager 'cmake;3.6.4111459'
-      - echo y | sdkmanager 'lldb;3.0'
-      - echo y | sdkmanager "platform-tools" >/dev/null
-      - echo y | sdkmanager "tools" >/dev/null # A second time per Travis docs, gets latest versions
-      - echo y | sdkmanager "build-tools;28.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
-      - echo y | sdkmanager "platforms;android-26" >/dev/null # We need the API of the emulator we will run
-      - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
-      - echo y | sdkmanager --channel=4 "emulator" >/dev/null # Use canary channel to get emulator 29.x for x86_64 image support
-      - echo y | sdkmanager "extras;android;m2repository" >/dev/null
+      # - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid harmless sdkmanager warning 
+      # - echo y | sdkmanager 'ndk-bundle'
+      # - echo y | sdkmanager 'cmake;3.6.4111459'
+      # - echo y | sdkmanager 'lldb;3.0'
+      # - echo y | sdkmanager "platform-tools" >/dev/null
+      # - echo y | sdkmanager "tools" >/dev/null # A second time per Travis docs, gets latest versions
+      # - echo y | sdkmanager "build-tools;28.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
+      # - echo y | sdkmanager "platforms;android-26" >/dev/null # We need the API of the emulator we will run
+      # - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
+      # - echo y | sdkmanager --channel=4 "emulator" >/dev/null # Use canary channel to get emulator 29.x for x86_64 image support
+      # - echo y | sdkmanager "extras;android;m2repository" >/dev/null
       # - echo y | sdkmanager "system-images;android-26;default;x86" >/dev/null # install our emulator
 
-      - echo y | sdkmanager "system-images;android-$API;$EMU_FLAVOR;$ABI" >/dev/null # install our emulator
-      - echo no | avdmanager create avd --force -n test -k "system-images;android-$API;$EMU_FLAVOR;$ABI" -c 10M
-      - emulator -verbose -avd test -no-accel -no-snapshot -no-window $AUDIO -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
-      - android-wait-for-emulator
-      - adb shell input keyevent 82 &
-      - cat /home/travis/.android/avd/test.avd/config.ini
+      # - echo y | sdkmanager "system-images;android-$API;$EMU_FLAVOR;$ABI" >/dev/null # install our emulator
+      # - echo no | avdmanager create avd --force -n test -k "system-images;android-$API;$EMU_FLAVOR;$ABI" -c 10M
+      # - emulator -verbose -avd test -no-accel -no-snapshot -no-window $AUDIO -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
+      # - android-wait-for-emulator
+      # - adb shell input keyevent 82 &
+      # - cat /home/travis/.android/avd/test.avd/config.ini
       # - echo 'skin.name=1920x1080' >> /home/travis/.android/avd/test.avd/config.ini
       # - echo 'hw.lcd.height=1920' >> /home/travis/.android/avd/test.avd/config.ini
       # - echo 'hw.lcd.width=1080' >> /home/travis/.android/avd/test.avd/config.ini
-      - cat /home/travis/.android/avd/test.avd/config.ini
+      # - cat /home/travis/.android/avd/test.avd/config.ini
     before_script:
-      - echo no | avdmanager create avd --force -n test -k "system-images;android-26;default;x86_64" --abi x86_64
+      - echo no | avdmanager create avd --force -n test -k "system-images;android-27;default;armeabi-v7a" --abi armeabi-v7a -c 100M
       - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
       - android-wait-for-emulator
       - adb shell input keyevent 82 &
     script:
       - adb devices
       # - yes | sudo sdkmanager --licenses 
-      
       - detox build -c android.emu.release
       - detox test -c android.emu.release --cleanup
