--- a/.travis.yml
+++ b/.travis.yml
@@ -95,31 +95,10 @@ matrix:
     dist: trusty
     jdk:
     - oraclejdk8
-    android:
-      components:
-      
-      - tools
-      - android-27
-      - platform-tools
-      - tools
-      - build-tools-27.3.8
-      
-      # - android-28
-      # - add-on
-      # - extra
-      # - extra-android-support
-      - extra-google-google_play_services
-      - extra-google-m2repository
-      - extra-android-m2repository
-      - sys-img-x86-android-27
-      # - sys-img-x86-android-28
-      # - sys-img-armeabi-v7a-google_apis-26
-      - sys-img-armeabi-v7a-google_apis-27
-    # branches:
-    #   only:
-    #   - master
     env:
       global:
+      - ANDROID_API_LEVEL=25
+      - ANDROID_BUILD_TOOLS_VERSION=25.0.2
       - NODE_VERSION=10.2.1
       - ADB_INSTALL_TIMEOUT=8
       - ABI=x86
@@ -129,14 +108,37 @@ matrix:
       - TOOLS=${ANDROID_HOME}/tools
       - PATH=${ANDROID_HOME}:${ANDROID_HOME}/emulator:${TOOLS}:${TOOLS}/bin:${ANDROID_HOME}/platform-tools:${PATH}
       - API=27
+    android:
+      components:
+      
+      - tools
+      - android-$ANDROID_API_LEVEL
+      - platform-tools
+      - tools
+      - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+      
+      # - android-28
+      # - add-on
+      # - extra
+      # - extra-android-support
+      - extra-google-google_play_services
+      - extra-google-m2repository
+      - extra-android-m2repository
+      - sys-img-x86-android-$ANDROID_API_LEVEL
+      # - sys-img-x86-android-28
+      # - sys-img-armeabi-v7a-google_apis-26
+      - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
+    # branches:
+    #   only:
+    #   - master
     licenses:
       - 'android-sdk-preview-license-.+'
       - 'android-sdk-license-.+'
       - 'google-gdk-license-.+'
     install:
       - export ANDROID_SDK_ROOT=$ANDROID_HOME
-      - echo y | sdkmanager "ndk-bundle"
-      - echo y | sdkmanager "platforms;android-27"
+      # - echo y | sdkmanager "ndk-bundle"
+      # - echo y | sdkmanager "platforms;android-27"
       - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
       - export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
       - nvm install 10.2.1
@@ -170,11 +172,13 @@ matrix:
       # - echo 'hw.lcd.height=1920' >> /home/travis/.android/avd/test.avd/config.ini
       # - echo 'hw.lcd.width=1080' >> /home/travis/.android/avd/test.avd/config.ini
       # - cat /home/travis/.android/avd/test.avd/config.ini
-    before_script:
-      - echo no | android create avd --force -n test -t android-27 --abi x86 -c 100M
-      - emulator -avd test -no-audio -no-window &
-      - android-wait-for-emulator
-      - adb shell input keyevent 82 &
+    
+    # before_script:
+    #   - echo no | android create avd --force -n test -t android-27 --abi x86 -c 100M
+    #   - emulator -avd test -no-audio -no-window &
+    #   - android-wait-for-emulator
+    #   - adb shell input keyevent 82 &
+
     script:
       - adb devices
       # - yes | sudo sdkmanager --licenses 
