--- a/.travis.yml
+++ b/.travis.yml
@@ -150,7 +150,7 @@ matrix:
       - react-native link
 
       # - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid harmless sdkmanager warning 
-      # - echo y | sdkmanager 'ndk-bundle'
+      - echo y | sdkmanager 'ndk-bundle'
       # - echo y | sdkmanager 'cmake;3.6.4111459'
       # - echo y | sdkmanager 'lldb;3.0'
       # - echo y | sdkmanager "platform-tools" >/dev/null
@@ -178,6 +178,7 @@ matrix:
     #   - emulator -avd test -no-audio -no-window &
     #   - android-wait-for-emulator
     #   - adb shell input keyevent 82 &
+    before_script:
 
     script:
       - adb devices
