--- a/.travis.yml
+++ b/.travis.yml
@@ -151,8 +151,8 @@ matrix:
 
       # - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid harmless sdkmanager warning 
       - echo y | sdkmanager 'ndk-bundle'
-      # - echo y | sdkmanager 'cmake;3.6.4111459'
-      # - echo y | sdkmanager 'lldb;3.0'
+      - echo y | sdkmanager 'cmake;3.6.4111459'
+      - echo y | sdkmanager 'lldb;3.0'
       # - echo y | sdkmanager "platform-tools" >/dev/null
       # - echo y | sdkmanager "tools" >/dev/null # A second time per Travis docs, gets latest versions
       # - echo y | sdkmanager "build-tools;28.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
