--- a/.travis.yml
+++ b/.travis.yml
@@ -125,7 +125,7 @@ matrix:
       - extra-google-m2repository
       - extra-android-m2repository
       - sys-img-x86-android-$ANDROID_API_LEVEL
-      - sys-img-x86-android-27
+      # - sys-img-x86-android-27
       # - sys-img-armeabi-v7a-google_apis-26
       - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
     # branches:
@@ -162,7 +162,7 @@ matrix:
       # - echo y | sdkmanager "extras;android;m2repository" >/dev/null
       # - echo y | sdkmanager "system-images;android-26;default;x86" >/dev/null # install our emulator
 
-      # - echo y | sdkmanager "system-images;android-$API;$EMU_FLAVOR;$ABI" >/dev/null # install our emulator
+      - echo y | sdkmanager "system-images;android-$API;$EMU_FLAVOR;$ABI" # install our emulator
       # - echo no | avdmanager create avd --force -n test -k "system-images;android-$API;$EMU_FLAVOR;$ABI" -c 10M
       # - emulator -verbose -avd test -no-accel -no-snapshot -no-window $AUDIO -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
       # - android-wait-for-emulator
