--- a/.travis.yml
+++ b/.travis.yml
@@ -180,7 +180,7 @@ matrix:
     #   - adb shell input keyevent 82 &
     before_script:
       - echo no | android create avd --force -n test -t android-27 --abi x86 -c 100M
-      - emulator -avd test -no-audio -no-window &
+      - emulator -avd test &
 
     script:
       - adb devices
