--- a/.travis.yml
+++ b/.travis.yml
@@ -92,7 +92,9 @@
 matrix:
   include:
     language: android
-    os: osx
+    dist: trusty
+    jdk:
+    - oraclejdk8
     env:
       global:
       - ANDROID_API_LEVEL=27
@@ -161,6 +163,7 @@ matrix:
       # - echo y | sdkmanager "system-images;android-26;default;x86" >/dev/null # install our emulator
 
       - echo y | sdkmanager "system-images;android-$API;$EMU_FLAVOR;$ABI" # install our emulator
+      - emulator -list-avds
       # - echo no | avdmanager create avd --force -n test -k "system-images;android-$API;$EMU_FLAVOR;$ABI" -c 10M
       # - emulator -verbose -avd test -no-accel -no-snapshot -no-window $AUDIO -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
       # - android-wait-for-emulator
@@ -176,9 +179,6 @@ matrix:
     #   - emulator -avd test -no-audio -no-window &
     #   - android-wait-for-emulator
     #   - adb shell input keyevent 82 &
-    before_script:
-      - echo no | android create avd --force -n test -t android-27 --abi x86 -c 100M
-      # - emulator -avd test -no-audio -no-window &
 
     script:
       - adb devices
