--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,23 @@
 language: android
 jdk: oraclejdk8
-env:
-  global:
-    - ANDROID_TARGET=android-23
-    - ANDROID_ABI=x86
-
 android:
   components:
-  - tools
-  - platform-tools
-  - build-tools-25.0.1
-  - android-23
-  - extra-android-m2repository
-  - extra-google-m2repository
-  - sys-img-x86-android-23
+    - tools # to get the new `repository-11.xml`
+    - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
+    - platform-tools
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - build-tools-25.0.0
+    - android-25
+    - android-22 # Android platform used by your alternative emulator
+    - sys-img-armeabi-v7a-android-22
+
+before_script:
+    - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
+
 script:
-  - android list targets
-  - echo no | android create avd --force -n test -t android-23 --abi x86 -no-accel
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-after_success:
-  - bash echo "Yata!"
+    - bash echo "DONE!"
