--- a/.travis.yml
+++ b/.travis.yml
@@ -117,6 +117,8 @@ matrix:
       - extra-google-m2repository
       - extra-android-m2repository
       - build-tools-25.0.0
+      - build-tools-27.0.3
+      - android-27
       - android-25
       - android-22 # Android platform used by your alternative emulator
       - sys-img-armeabi-v7a-android-22
@@ -167,8 +169,8 @@ matrix:
     #   - echo y | sdkmanager 'lldb;3.0'
     #   # - echo y | sdkmanager "platform-tools" >/dev/null
     #   # - echo y | sdkmanager "tools" >/dev/null # A second time per Travis docs, gets latest versions
-    #   # - echo y | sdkmanager "build-tools;28.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
-    #   - echo y | sdkmanager "platforms;android-27" # We need the API of the emulator we will run
+      - echo y | sdkmanager "build-tools;27.0.3" >/dev/null # Implicit gradle dependency - gradle drives changes
+      - echo y | sdkmanager "platforms;android-27" # We need the API of the emulator we will run
     #   # - echo y | sdkmanager "platforms;android-28" >/dev/null # We need the API of the current compileSdkVersion from gradle.properties
     #   # - echo y | sdkmanager --channel=4 "emulator" >/dev/null # Use canary channel to get emulator 29.x for x86_64 image support
     #   # - echo y | sdkmanager "extras;android;m2repository" >/dev/null
